objects/Success_Priority__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_Stakeholder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The stakeholder who will own this success priority</inlineHelpText>
        <label>Key Stakeholder</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Success_Plan__c</field>
                <operation>equals</operation>
                <valueField>Key_Stakeholders__c.Success_Plan__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Key_Stakeholders__c</referenceTo>
        <relationshipLabel>Success Priorities</relationshipLabel>
        <relationshipName>Success_Priorities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastModifiedBoDate__c</fullName>
        <label>LastModifiedBoDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Updated__c</fullName>
        <formula>IF(LastModifiedBoDate__c&gt; LastModifiedDate ,  LastModifiedBoDate__c , LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offer</label>
        <referenceTo>Offer__c</referenceTo>
        <relationshipLabel>Success Priorities</relationshipLabel>
        <relationshipName>Success_Priorities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planned_End_Date__c</fullName>
        <label>Planned End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Start_Date__c</fullName>
        <label>Planned Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>On Track</fullName>
                </value>
                <value>
                    <fullName>Potential Risk</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Risk/Roadblock</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Success_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Success Plan</label>
        <referenceTo>Success_Plan__c</referenceTo>
        <relationshipLabel>Success Priorities</relationshipLabel>
        <relationshipName>Success_Priorities</relationshipName>
        <type>Lookup</type>
    </fields>
    <description>Used in C360</description>
    <label>Success Priority</label>
    <nameField>
        <label>Success Priority Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Success Priorities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>Greate_Plan_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Planned_End_Date__c  &lt;  Planned_Start_Date__c</errorConditionFormula>
        <errorMessage>End Date Must be After Start Date</errorMessage>
    </validationRules>
</CustomObject>